# openclaw-security-guide

./: .gitignore  01-实践报告.md  02-治理指南.md  03-实施指南.md  04-技术指南.md  05-演进指南.md  CHANGELOG.md  CONTRIBUTING.md  EVOLUTION_PLAN.md  LICENSE  OpenClaw_AI_Agent_安全评估报告.md  OpenClaw_PPT_大纲.md  README.md  SKILL.md  openclaw-github-auto-security-prompt.md  openclaw-github-security-prompt.md  openclaw_security_hardening.sh  pyproject.toml  requirements.txt  setup.py  优化实施计划.md  外部评价报告.md  完整测试Prompt.md  待办研究项目.md  快速使用指南.md  测试Prompt.md  研究报告格式规范.md  规划.md
.github/workflows/: ci.yml
01-基础安全/: 01.1-配置安全.md  01.2-身份认证.md  01.3-数据安全.md
02-应用安全/: 02.1-Skills供应链安全.md  02.2-提示词安全.md  02.3-MCP安全.md
03-网络运营/: 03.1-网络安全.md  03.2-监控告警.md  03.3-运维安全.md
04-事件响应/: 04.1-响应流程.md  04.2-合规映射.md  04.3-Playbook.md
05-容器安全/: 05.1-镜像安全.md  05.2-运行时安全.md  05.3-K8s安全.md
06-办公安全/: 06.1-终端安全.md  06.2-网络安全.md  06.3-数据保护.md
07-检测清单/: security-checklist-complete.md
07-行为安全/: 07.1-AI行为分析.md  07.2-监控与审计.md  07.3-异常检测.md
08-新型风险/: 08.1-提示词注入.md  08.2-知识库污染.md  08.3-对抗攻击.md
08-部署环境/: environment-scenarios.md
09-Skill引用/: skill-tools-reference.md
09-红蓝对抗/: 09.1-红队攻击.md  09.2-蓝队防御.md  09.3-对抗演练.md
10-实战演练/: 10.1-场景案例.md  10.2-应急响应.md  10.3-复盘总结.md
11-MAESTRO框架/: README.md
config/: approvers.yaml  monitoring.yaml  openclaw.json  security-config.yaml  test_openclaw.json
docs/: Part1-引用依据和论证报告.md  Part2-审批流程详解.md  Part2-监控告警配置指南.md  Part3-自动化治理工具.md  Part4-自动化迭代方案.md
examples/: docker-compose.security.yml  example-assessment.txt  example-deploy.sh  example-hardening.sh  example-security-config.yaml
prompts/: security-assessment-v2.md  优化对比说明.md
scripts/: gap_analysis.py  security_hardening.sh  self_assessment.py
tests/: test_adapters.py  test_research_tools.py  test_security_detector.py
tools/: README.md  SKILL.md  config_baseline.py  config_watcher.py  multi_platform_scanner.py  security_detector.py  security_hardening.py  token_generator.py
tools/adapters/: autogpt_adapter.py  base_adapter.py  dify_adapter.py  (+1 more)
发布/: GITHUB发布规则.md  gen.js  公众号发布-beta.html  公众号发布.html
附录/: A-工具集使用指南.md  B-检测清单.md  C-行业规范映射.md  D-快速开始.md  E-版本历史.md
(+6 files in other folders)
